# save3ds

./: .gitattributes  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
example_extractor/: build.sh  main.c
libsave3ds/: Cargo.toml
libsave3ds/src/: aes_ctr_file.rs  byte_struct_common.rs  cart_save_data.rs  db.rs  diff.rs  difi_partition.rs  disa.rs  disk_file.rs  dpfs_level.rs  dual_file.rs  error.rs  ext_data.rs  extdiffsize.txt  fat.rs  file_system.rs  fs.rs  fs_meta.rs  ivfc_level.rs  key_engine.rs  lib.rs  memory_file.rs  misc.rs  nand.rs  random_access_file.rs  save_data.rs  save_ext_common.rs  sd.rs  sd_nand_common.rs  signed_file.rs  sub_file.rs  wear_leveling.rs
libsave3ds_c/: Cargo.toml
libsave3ds_c/include/: save3ds_c.h
libsave3ds_c/src/: lib.rs
save3ds_fuse/: Cargo.toml
save3ds_fuse/src/: main.rs
src/: 00000000.disa  difi_partition.rs  disa.rs  disk_file.rs  dpfs_level.rs  dual_file.rs  fat.rs  fs.rs  ivfc_level.rs  main.rs  memory_file.rs  random_access_file.rs  save_data.rs  sub_file.rs
