[package]
name = "save3ds_fuse"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"

[features]
default = ["unixfuse"]
unixfuse = ["libc", "fuse", "time"]

[dependencies]
libsave3ds = { path = "../libsave3ds" }
getopts = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.54", optional = true }
fuse = { version = "0.3.1", optional = true }
time = { version = "0.1.42", optional = true }
