[package]
name = "save3ds_fuse"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"

[features]
default = ["unixfuse"]
unixfuse = ["libc",  "time", "fuser"]

[dependencies]
libsave3ds = { path = "../libsave3ds" }
getopts = "0.2"
stderrlog = "0.5"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
fuser = { version = "0.12.0", optional = true }
time = { version = "0.2.0", optional = true }
